--- a/bisapp/templates/homepage.html
+++ b/bisapp/templates/homepage.html
@@ -10,7 +10,7 @@
             margin: 0;
             padding: 0;
             background-color: #f0f0f0;
-            background-image: url('https://cdn.pixabay.com/photo/2016/11/22/22/24/adult-1850925_1280.jpg'); /* Замените ссылку на своё изображение */
+            background-image: url('https://cdn.pixabay.com/photo/2016/11/22/22/24/adult-1850925_1280.jpg');
             background-size: cover;
             background-repeat: no-repeat;
             background-position: center;
