--- a/bisapp/templates/homepage.html
+++ b/bisapp/templates/homepage.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Главная страница ФИТНЕС КЛУБА</title>
+    <title>Главная страница Fast and Furios</title>
     <style>
         body {
             font-family: Arial, sans-serif;
